# peergrades

./: README.md
EKRLib-2/: EKRLib.sln
EKRLib-2/EKRLib/: Car.cs  EKRLib.csproj  MotorBoat.cs  Transport.cs  TransportException.cs
EKRLib-2/LibraryCheck/: LibraryCheck.csproj  Program.cs
FileManager/: FileManager.sln
FileManager/FileManager/: Operations.cs  Program.cs
Fractal Thing/: Fractal Thing.sln
Fractal Thing/Fractal Thing/: App.xaml  App.xaml.cs  Fractal Thing.csproj  FractalTools.cs  MainWindow.xaml  MainWindow.xaml.cs  readme.txt
Matrix Calculator/: Matrix Calculator.sln  readme.txt
Matrix Calculator/Matrix Calculator/: Matrix Calculator.csproj  Matrix.cs  Program.cs
NotPeerGrade/: NotPeerGrade.sln
NotPeerGrade/NotPeerGrade/: NotPeerGrade.csproj  Program.cs  Readme.txt  Startup.cs
NotPeerGrade/NotPeerGrade/Controllers/: LettersController.cs  UsersController.cs
NotPeerGrade/NotPeerGrade/Models/: Letter.cs  (+1 more)
Notepad+/: Notepad.sln  Readme.txt
Notepad+/Notepad+/: AutoSaving.cs  ContextMenu.cs  ErrorForm.Designer.cs  ErrorForm.cs  FontChangingTools.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  Notepad.csproj  Program.cs  TabExtension.cs
PeerGrade1cpp/: .gitignore  AdjacencyList.cpp  AdjacencyList.h  AdjacencyMatrix.cpp  AdjacencyMatrix.h  CMakeLists.txt  DoSmth.cpp  DoSmth.h  EdgeList.cpp  EdgeList.h  Graph.cpp  Graph.h  IncidenceMatrix.cpp  IncidenceMatrix.h  MatrixInput.cpp  MatrixInput.h  MaxFromSomeList.cpp  MaxFromSomeList.h  main.cpp  readme.txt  readme_cpp.txt
bullycows/: bullycows.sln
bullycows/bullycows/: Program.cs
(+5 files in other folders)
